; ModuleID = '/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/lib/libdtrace/common/extr_dt_cc.c_dtrace_program_fcompile.c'
source_filename = "/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/lib/libdtrace/common/extr_dt_cc.c_dtrace_program_fcompile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DT_CTX_DPROG = common dso_local global i32 0, align 4
@DTRACE_PROBESPEC_NAME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @dtrace_program_fcompile(i32* %0, i32* %1, i32 %2, i32 %3, i8** %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8**, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i8** %4, i8*** %10, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32, i32* @DT_CTX_DPROG, align 4
  %13 = load i32, i32* @DTRACE_PROBESPEC_NAME, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load i8**, i8*** %10, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = call i32* @dt_compile(i32* %11, i32 %12, i32 %13, i32* null, i32 %14, i32 %15, i8** %16, i32* %17, i32* null)
  ret i32* %18
}

declare dso_local i32* @dt_compile(i32*, i32, i32, i32*, i32, i32, i8**, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
